# PDM_group35

./: .gitignore  .gitmodules  README.md
PDM_project/: FlyV2.py  Fly_holes_temp.py  PID.py  completeModel.py  pointmass.py  pyproject.toml  smoothpath.npy  smoothpath2D.npy  track2.npy  track3.npy
PDM_project/RRT/: GridRRT_star.py  MainRRT.ipynb  MainRRT.py  Obstcorners.ipynb  RRT.py  RRT_backup.py  RRT_star.py  RRT_star_3D.py  Testmaps.py  VideoRRT.py  main.ipynb  occupancy_grid.npy  occupancygrid.npy
PDM_project/RRT_tests/: MainRRT.py  VideoRRT.py
PDM_project/deletemaybe/: PID.py  Quadrotor.py
PDM_project/quadrotor_project/: __init__.py
PDM_project/quadrotor_project/assets/: Hole_obstacle_course.urdf  Parcour2.urdf  cf2p_pointmass.urdf  cf2x.urdf  cf2x_pointmass.urdf  drone_parcours.urdf  track1.npy  track1.urdf  track2.urdf  track3.npy  track3.urdf  track4.npy  track4.urdf  track5.npy  track5.urdf
PDM_project/quadrotor_project/control/: pointmassPID.py
PDM_project/quadrotor_project/envs/: PointMassAviary.py  RRTAviary.py  __init__.py
PDM_project/quadrotor_project/planningAlgorithms/: RRT.py  occupancyGridTools.py
assets/: cf2p_pointmass.urdf
