[tool.poetry]
name = "quadrotor_project"
version = "0.0.1"
description = "Package created for "
authors = ["Kieran de Klerk <k.j.deklerk-1@student.tudelft.nl>", "Thijs Domburg <>", "Fabian Gebben <>", "Amin Mimoun Bourass <>"]
repository = "https://github.com/KierandeKlerk/PDM_group35.git"
packages = [
    { include = "quadrotor_project" }
]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
Pillow = "^9.0"
numpy = "^1.22"
matplotlib = "^3.5"
gym = "^0.21"
pybullet = "^3.2"
scipy = "^1.8"
trimesh = "^3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"